2005-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_create_row_drag_icon): 
	* gtk/gtkiconview.c (gtk_icon_view_create_drag_icon): Silently
	return NULL if the widget is not realized.  (#316023,
	Guillaume Cottenceau)

2005-09-11  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdk.symbols: 
	* gdk/gdkproperty.h: 
	* gdk/x11/gdkproperty-x11.c (gdk_atom_intern_static_string): 
	New function to avoid pointless strdups when creating atoms
	from static strings.  

	* gdk/x11/*.c:
	* gtk/*.c:  Use gdk_atom_intern_static_string() where 
	appropriate.

2005-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererkeys.h: 
	* gtk/gtkcellrendererkeys.c: Add a cell renderer for displaying
	and editing accelerators, a port of EggCellRendererKeys .

	* gtk/gtk.symbols:
	* gtk/gtk.h:
	* gtk/Makefile.am: Add the keys cell renderer.

	* tests/Makefile.am: 
	* tests/testkeys.c: Test GtkCellRendererKeys

2005-09-09  Matthias Clasen  <mclasen@redhat.com>

	Make it possible to determine if a key event is for a
	modifier key:
	
 	* gdk/x11/gdkprivate-x11.h: 
	* gdk/x11/gdkkeys-x11.c (_gdk_keymap_key_is_modifier): 
	New function to determine if a keycode is mapped to a modifier.
	(get_xkb): Get the modmap.

	* gdk/x11/gdkevents-x11.c (translate_key_event): Set the 
	is_modifier bit by calling _gdk_keymap_key_is_modifier().

	* gdk/gdkevents.h (struct _GdkEventKey): Add an is_modifier
	bit.

2005-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkpixbuf-drawable.c (convert_real_slow): Remove an 
	unused variable, noticed by Kjartan Maraas.

2005-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_button_event): 
	Make drag reordering work properly for columns other than the
	first.  (#315054, Dan Winship)
	
	* gtk/gtkfontsel.c (gtk_font_selection_set_font_name): Handle 
	invalid fontnames better. (#136926, Michael R. Walton)
	
	Stop cursor blinking in non-editable regions of a text view.